<resources>
    <string name="app_name">AI Service Client</string>
    <string name="server_url_hint">Server URL (e.g., http://192.168.1.100:8000)</string>
    <string name="connect_button">Connect</string>
    <string name="test_connection_button">Test Connection</string>
    <string name="caller_number_hint">Caller Number</string>
    <string name="called_number_hint">Called Number</string>
    <string name="simulate_call_button">Simulate Call</string>
    <string name="connection_status">Connection Status:</string>
    <string name="not_connected">Not Connected</string>
    <string name="connected">Connected</string>
    <string name="testing">Testing...</string>
    <string name="response_label">Response:</string>
    <string name="call_id_hint">Call ID</string>
</resources>
